lang.java.statics.test/tests/positive/expressions/new-pkg-qualified-class.yes.javtest
STATIX ok
JAVAC  ok

[p] {

    [A]
    package p;
    public class A {}

    [B]
    package p;
    public class B {
        public A a = new p.A();
    }

}
