lang.java.statics.test/tests/negative/expressions/new-pkg-unqualified-class.no.javtest
STATIX fail java\.names\.lexical-type-name.*\"A\"
JAVAC  fail cannot find symbol

[q] {

    [A]
    package q;
    public class A {}

}

[p] {

    [B]
    package p;
    public class B {
        public A a = new A();
    }

}
